Finish paperclip local

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="field">
-    <%= f.file_field :profile_photo_data %>
+    <%= f.file_field :profile_photo %>
   </div>
 
   <div class="actions">
