--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,10 @@
 
 <p>
   <strong>Photo:</strong>
-  <%= image_tag serve_user_photo_path(@user) %>
+  <%= image_tag @user.profile_photo.url %>
+  <%= image_tag @user.profile_photo.url(:large) %>
+  <%= image_tag @user.profile_photo.url(:medium) %>
+  <%= image_tag @user.profile_photo.url(:thumb) %>
 </p
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
