--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Photo:</strong>
-  <%= image_tag @user.profile_photo.url %>
+  <%= image_tag @user.profile_photo %>
   <%= image_tag @user.profile_photo.expiring_url(10, :large) %>
   <%= image_tag @user.profile_photo.expiring_url(10, :medium) %>
   <%= image_tag @user.profile_photo.expiring_url(10, :thumb) %>
